--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,19 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 //
-// .fa {
-//   font-size: 20px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   color: #F6682F;
-//   cursor: pointer;
-//   // padding: 5px;
-// }
-//
-// .fa:hover {
-//   // background-color: #EFF2F5;
-// }
+.fa {
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #F6682F;
+  cursor: pointer;
+  // padding: 5px;
+}
 
 .login-form {
   text-align: center;
@@ -30,8 +26,6 @@
 .errors {
   padding: 5px;
 }
-
-
 
 .header-name {
   color: white;
@@ -51,8 +45,21 @@
   border: 1px solid gray;
 }
 
+.splash-image {
+  height: 750px;
+  width: 100%;
+}
 
-
+// .img-wrapper {
+//   width: 100%;
+//   height: 750px;
+//   overflow: hidden;
+  // background-size: cover;
+  // background-repeat: no-repeat;
+  //
+  // background-attachment: fixed;
+  // background-position: center;
+// }
 .homepage-image {
     min-height: 600px;
     background-image: url(http://res.cloudinary.com/dtluc0y85/image/upload/c_scale,h_370,w_615/v1500534602/homepage_test_ltezbc.gif);
