add splash-text and styling in home page

--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -9,6 +9,7 @@
   line-height: 30px;
   font-weight: 200;
   font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+  letter-spacing: 1px;
 }
 
 .event-index-container {
@@ -48,6 +49,7 @@
 .eventTitle {
   font-size: 15px;
   line-height: 19px;
+  color: #4c4c4c;
 }
 
 .eventIndexLocation {
