--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -50,17 +50,36 @@
   width: 100%;
 }
 
-// .img-wrapper {
-//   width: 100%;
-//   height: 750px;
-//   overflow: hidden;
-  // background-size: cover;
-  // background-repeat: no-repeat;
-  //
-  // background-attachment: fixed;
-  // background-position: center;
-// }
-.homepage-image {
+.splash-text-container {
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+}
+
+.splash-text {
+  font-family: "Benton Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  z-index: 100;
+  background-color: white;
+  color: #f6682f;
+  font-weight: 200;
+  padding: 35px;
+  font-size: 35px;
+  border: 1px solid #EFF2F5;
+  text-align: center;
+  border-radius: 5px;
+  width: 60%;
+  letter-spacing: 1px;
+  margin-top: -18px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.25);
+}
+
+.img-wrapper {
+  width: 100%;
+  height: 750px;
+  overflow: hidden;
+}
+
+.parallax {
     min-height: 600px;
     background-image: url(http://res.cloudinary.com/dtluc0y85/image/upload/c_scale,h_370,w_615/v1500534602/homepage_test_ltezbc.gif);
     background-size: cover;
