--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -14,6 +14,7 @@
 
 .login-form {
   text-align: center;
+  margin-top: -20px;
   input {
     text-align: center;
   }
@@ -43,6 +44,7 @@
   display: flex;
   align-self: center;
   border: 1px solid gray;
+  letter-spacing: 1px;
 }
 
 .splash-image {
