--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -12,6 +12,11 @@
   letter-spacing: 1px;
 }
 
+.event-index-wrapper {
+  // width: 330px;
+  // height: 300px;
+}
+
 .event-index-container {
   display: flex;
   flex-direction: row;
@@ -40,13 +45,32 @@
 
 }
 
-.event-container-hover:hover {
-  background-color: rgba(0,0,0,0.45);
+// .event-container-hover:hover {
+//   background-color: rgba(0,0,0,0.45);
+// }
+
+.event-container img {
+  height: 158px;
+}
+
+.event-price-span {
+  background-color: rgba(255,255,255,.92);
+  text-transform: uppercase;
+  line-height: 18px;
+  font-size: 13px;
+  color: #282C35;
+  // box-sizing: border-box;
+  padding: 2px 10px;
+  position: absolute;
+  // display: inline-block;
+  top: 10px;
+  right: 10px;
+  letter-spacing: 0.5px;
 }
 
 .eventIndex-detailsDiv {
-  padding-left: 10px;
-  letter-spacing: 0.5px;
+  padding: 0px 10px;
+  letter-spacing: 0.3px;
 }
 
 .datetime-p {
@@ -60,12 +84,15 @@
   font-size: 15px;
   line-height: 19px;
   color: #4c4c4c;
-  margin: 5px 0px;
+  margin: 3px 0px;
+  height: 38px;
 }
 
 .event-index-location {
   font-size: 13px;
   color: #666A73;
+  height: 20px;
+  line-height: 15px;
 }
 
 .eventBookmarkDiv {
