style footer component

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,6 +5,7 @@
 @import 'events_index.scss';
 @import 'event_show.scss';
 @import 'event_form.scss';
+@import 'footer.scss';
 @import 'tickets.scss';
 @import 'bookmarks.scss';
 
