--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -19,8 +19,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 20px;
 }
 
 .fa-bookmark, .fa-bookmark-o {
-  font-size: 25px;
+  font-size: 24px;
+  color: #666A73;
+}
+
+
+.fa-bookmark, .fa-bookmark-o:hover {
+  color: #0093d7;
 }
