update and style user profile

--- a/app/assets/stylesheets/event_form.scss
+++ b/app/assets/stylesheets/event_form.scss
@@ -176,7 +176,7 @@
   // border-bottom: 2px solid black;
 }
 
-.tickets-button {
+.make-event-live-button {
   cursor: pointer;
   border-radius: 3px;
   margin: 15px auto;
@@ -184,7 +184,7 @@
   background-color: #00ab44;
   color: white;
   width: 210px;
-  height:33px;
+  height: 33px;
   font-size: 14px;
   letter-spacing: 1px;
   display: flex;
@@ -195,7 +195,7 @@
   box-shadow: 0 4px 6px -2px rgba(22,22,22,0.45);
 }
 
-.tickets-button:hover {
+.make-event-live-button:hover {
   background-color: #00451b;
 }
 
