--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,6 @@
 @import 'navbar.scss';
 @import 'sessions.scss';
-@import 'users.scss';
+@import 'userprofile.scss';
 @import 'static_pages.scss';
 @import 'events_index.scss';
 @import 'event_show.scss';
@@ -9,7 +9,7 @@
 @import 'tickets.scss';
 @import 'bookmarks.scss';
 
-.login-input {
-  border: none;
-  border-bottom: 1px solid black;
-}
+// .login-input {
+//   border: none;
+//   border-bottom: 1px solid black;
+// }
