--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -2,19 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 //
+.event-index-wrapper {
+  background: #f8f8fa;
+}
 .event-list-header {
   display: flex;
   justify-content: center;
   font-size: 25px;
-  line-height: 30px;
   font-weight: 200;
   font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
   letter-spacing: 1px;
-}
-
-.event-index-wrapper {
-  // width: 330px;
-  // height: 300px;
+  -webkit-margin-before: 0;
+  padding-top: 50px
 }
 
 .event-index-container {
@@ -23,7 +22,6 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 70px;
-  // background-color: #F8F8FA;
 }
 
 .event-container {
@@ -33,20 +31,14 @@
   width: 330px;
   height: 300px;
   box-shadow: 0 3px 8px 2px rgba(22,22,22,0.45);
-  // font-family: 'Convergence', sans-serif;
   font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
 }
 
-.event-container-hover {
-  position: absolute;
-  width: 330px;
-  height: 300px;
-  z-index: 10;
-
-}
-
-// .event-container-hover:hover {
-//   background-color: rgba(0,0,0,0.45);
+// .event-container-hover {
+//   position: absolute;
+//   width: 330px;
+//   height: 300px;
+//   z-index: 10;
 // }
 
 .event-container img {
@@ -71,6 +63,36 @@
 .eventIndex-detailsDiv {
   padding: 0px 10px;
   letter-spacing: 0.3px;
+  display: flex;
+
+  .month-day {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    p {
+      text-transform: uppercase;
+    }
+
+    p.month {
+      color: #f6682f;
+      font-size: 12px;
+      line-height: 1.4;
+      font-weight: 400;
+      letter-spacing: 0.5px;
+      text-align: center;
+    }
+
+    p.day {
+      color: #666a73;
+      font-size: 1.25rem;
+      line-height: 1.3;
+      font-weight: 400;
+      text-rendering: optimizeLegibility;
+      text-align: center;
+    }
+  }
 }
 
 .datetime-p {
@@ -93,6 +115,9 @@
   color: #666A73;
   height: 20px;
   line-height: 15px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .eventBookmarkDiv {
