--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -13,7 +13,7 @@
   font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
   letter-spacing: 1px;
   -webkit-margin-before: 0;
-  padding-top: 50px
+  padding-top: 50px;
 }
 
 .event-index-container {
@@ -30,8 +30,8 @@
   margin: 17px;
   width: 330px;
   height: 300px;
-  box-shadow: 0 3px 8px 2px rgba(22,22,22,0.45);
-  font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+  box-shadow: 0 1px 5px 1px rgba(0,0,0,0.15);
+  font-family: "Benton Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
 
 // .event-container-hover {
@@ -61,18 +61,20 @@
 }
 
 .eventIndex-detailsDiv {
-  padding: 0px 10px;
+  padding: 20px;
   letter-spacing: 0.3px;
   display: flex;
 
   .month-day {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
+    padding-right: 16px;
+    max-width: 48px;
 
     p {
-      text-transform: uppercase;
+
     }
 
     p.month {
@@ -82,12 +84,13 @@
       font-weight: 400;
       letter-spacing: 0.5px;
       text-align: center;
+      text-transform: uppercase;
     }
 
     p.day {
       color: #666a73;
       font-size: 1.25rem;
-      line-height: 1.3;
+      line-height: 1.4;
       font-weight: 400;
       text-rendering: optimizeLegibility;
       text-align: center;
@@ -103,11 +106,14 @@
 }
 
 .event-title {
-  font-size: 15px;
+  font-size: 1.25rem;
   line-height: 19px;
-  color: #4c4c4c;
-  margin: 3px 0px;
-  height: 38px;
+  color: #363a43;
+  margin: 0;
+  height: 25px;
+  font-weight: 300;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .event-index-location {
