update seed data and event_index

--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -117,6 +117,7 @@
 }
 
 .event-title {
+  font-family: Benton Sans,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,Helvetica,Tahoma,Arial,sans-serif;
   font-size: 1.05rem;
   line-height: 1.4;
   color: #363a43;
