update and style event show page details

--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -132,9 +132,9 @@
   font-weight: 300;
   color: #666A73;
   line-height: 1.4;
-  overflow: visible;
+  overflow: hidden;
   margin-top: 0px;
-  // text-overflow: ellipsis;
+  text-overflow: ellipsis;
   // white-space: nowrap;
   // border-bottom: 3px solid #f6682f;
 }
