--- a/app/assets/stylesheets/event_show.scss
+++ b/app/assets/stylesheets/event_show.scss
@@ -3,6 +3,7 @@
   margin: auto;
   margin-bottom: 50px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+  background: #fff;
 }
 
 .event-show-container {
@@ -20,30 +21,65 @@
   width: 715px;
 }
 
-.show-page-event-details {
-  padding-left: 35px;
-  background-color: #F4F2F1;
+.show-event-details-wrapper {
+  // padding-left: 35px;
+  // background-color: #F4F2F1;
   width: 100%;
+  // background: rgba(255, 255, 255, 0.9);
+  background: #F9F6F2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+
+  .show-event-details {
+    padding: 30px 30px 20px 30px;
+    margin: 0;
+    letter-spacing: 0.5px;
+  }
+
+  p {
+    color: #45494e;
+    // font-family: "Benton Sans","Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+    // letter-spacing: 0.5px;
+  }
+
+  p.month {
+    font-size: 12px;
+    line-height: 1.4;
+    text-transform: uppercase;
+    font-weight: 500;
+  }
+
+  p.day {
+    font-size: 1.25rem;
+    line-height: 1.4;
+    font-weight: 400;
+    text-rendering: optimizeLegibility;
+  }
+
+  h3 {
+    font-size: 24px;
+    font-weight: 500;
+  }
+
+  p.organizer-show {
+    color: #666A73;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    font-size: 15px;
+  }
+
+  .ticket-priceDiv {
+    // display: block;
+    // position: absolute;
+    font-size: 15px;
+    font-weight: 400;
+    bottom: 20px;
+    padding-left: 30px;
+  }
 }
 
-.eventTitleShow {
-  font-size: 24px;
-  letter-spacing: 0.5px;
-  font-weight: 500;
-}
-
-.event-authorDiv {
-  color: #666A73;
-  font-size: 15px;
-  font-weight: 400;
-}
-
-.ticket-priceDiv {
-  // display: block;
-  // position: absolute;
-  font-size: 15px;
-  font-weight: 400;
-}
 
 .bookmark-register-container {
   display: flex;
