--- a/app/assets/stylesheets/events_index.scss
+++ b/app/assets/stylesheets/events_index.scss
@@ -35,19 +35,46 @@
   // box-shadow: 0 1px 5px 1px rgba(0,0,0,0.15);
   font-family: "Benton Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 
+  // opacity: 0;
+
   span {
     position: absolute;
-    top: 137px;
+    top: 138px;
     right: 15px;
     background: #fff;
     border-radius: 50%;
     border: 1px solid #eff2f5;
     padding: 10px;
+    opacity: 0;
   }
+
+  // .fa-heart-o {
+  //   font-size: 18px;
+  //   color: #666A73;
+  // }
+  //
+  // .fa-heart-o:hover {
+  //   color: #0093d7;
+  // }
 }
 
 .event-container:hover {
   box-shadow: 0 1px 5px 1px rgba(0,0,0,0.15);
+
+  opacity: 1;
+  -webkit-transition-delay: 100ms;
+  transition-delay: 100ms;
+  -webkit-transition: opacity .45s cubic-bezier(0,0,.35,1);
+  transition: opacity .45s cubic-bezier(0,0,.35,1);
+
+  span {
+    // display: block;
+    opacity: 1;
+    -webkit-transition-delay: 100ms;
+    transition-delay: 100ms;
+    -webkit-transition: opacity .45s cubic-bezier(0,0,.35,1);
+    transition: opacity .45s cubic-bezier(0,0,.35,1);
+  }
 }
 
 .event-container img {
@@ -70,7 +97,7 @@
 }
 
 .eventIndex-detailsDiv {
-  padding: 24px;
+  margin: 24px;
   letter-spacing: 0.4px;
   display: flex;
 
