minor edits to dry code by rendering event index item comp rather than bookmarked event item

--- a/app/assets/stylesheets/userprofile.scss
+++ b/app/assets/stylesheets/userprofile.scss
@@ -102,7 +102,7 @@
 #bookmarkedEvents-container {
   background: #f8f8fa;
   padding-top: 15px;
-  margin-bottom: 25px;
+  padding-bottom: 25px;
 }
 
 /* =================================
