minor styling before heroku push

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -45,6 +45,7 @@
 
 .navlink-dropdown {
   font-size: 14px;
+  min-width: 170px;
 }
 
 .navlink-saved {
@@ -111,6 +112,7 @@ i.fa-angle-down {
 .logout-button-container {
   background-color: #fff;
   min-width: 170px;
+  font-size: 14px;
 }
 .logout-button-container:hover {
   background-color: #EFF2F5;
