--- a/app/assets/stylesheets/userprofile.scss
+++ b/app/assets/stylesheets/userprofile.scss
@@ -106,6 +106,9 @@
   margin-bottom: 0px;
 }
 
+.hidden {
+  opacity: 0;
+}
 /* =================================
   Media Queries
 ==================================== */
