update http to https

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -62,7 +62,7 @@
 
 .parallax {
     min-height: 600px;
-    background-image: url(http://res.cloudinary.com/dtluc0y85/image/upload/c_scale,h_370,w_615/v1500534602/homepage_test_ltezbc.gif);
+    background-image: url(https://res.cloudinary.com/dtluc0y85/image/upload/c_scale,h_370,w_615/v1500534602/homepage_test_ltezbc.gif);
     background-size: cover;
     background-repeat: no-repeat;
 
