--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -34,7 +34,17 @@
   z-index: 100;
   display: flex;
   justify-content: center;
-  background: #f8f8fa;
+  // background: #f8f8fa;
+}
+
+.slick-dots {
+  bottom: 7px;
+
+  li button:before {
+    color: white;
+    font-size: 10px;
+    opacity: 1;
+  }
 }
 
 .splash-text {
@@ -50,13 +60,13 @@
   border-radius: 5px;
   width: 60%;
   letter-spacing: 2px;
-  margin-top: -18px;
+  margin-top: -5px;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.25);
 }
 
 .img-wrapper {
   width: 100%;
-  height: 750px;
+  // height: 750px;
   overflow: hidden;
 }
 
