--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -56,7 +56,7 @@
   z-index: 100;
   display: flex;
   justify-content: center;
-  // background: #f8f8fa;
+  background: #f8f8fa;
 }
 
 .slick-dots {
