--- a/app/assets/stylesheets/userprofile.scss
+++ b/app/assets/stylesheets/userprofile.scss
@@ -106,10 +106,6 @@
   margin-bottom: 0px;
 }
 
-.no-saved-events-container {
-
-}
-
 #no-saved-events-img {
   opacity: 0.3;
   margin: 65px auto 0 auto;
@@ -127,7 +123,7 @@
   letter-spacing: 0.5px;
   text-align: center;
   color: #666A73;
-  margin: 15px 200px 30px 200px;
+  // margin: 15px 350px 30px 350px;
 }
 
 /* =================================
