render no events imgs and message

--- a/app/assets/stylesheets/userprofile.scss
+++ b/app/assets/stylesheets/userprofile.scss
@@ -114,6 +114,14 @@
   object-fit: cover;
 }
 
+#no-organized-events-img {
+  opacity: 0.3;
+  margin: 65px auto 0 auto;
+  height: 265px;
+  width: 300px;
+  object-fit: contain;
+}
+
 .text-container {
   padding: 20px 150px 0 150px;
 }
