remove unused code and unnecessary comments

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,7 +8,7 @@
 <main id="root">
     <div class="error-loading">
         <h2>Whoops, there is a problem loading the page...</h2>
-        <h2>We are Sorry</h2>
+        <h2>sorry about that =/</h2>
         <h4>Click <a style="color: blue; text-decoration: underline;" href="<%= root_url %>">Here</a> to return Home</h4>
     </div>
 </main>
